--- a/kubernetes/grassroots/templates/secret-dynamic.yaml.tmpl
+++ b/kubernetes/grassroots/templates/secret-dynamic.yaml.tmpl
@@ -4,5 +4,5 @@ data:
   GOOGLE_CLIENT_SECRET: "${GOOGLE_CLIENT_SECRET}"
 kind: Secret
 metadata:
-  name: grassroots
+  name: grassroots-dynamic
 type: Opaque
