--- a/kubernetes/superset/templates/values-dynamic.yaml.tmpl
+++ b/kubernetes/superset/templates/values-dynamic.yaml.tmpl
@@ -11,4 +11,4 @@ redis:
 # for MySQL and PostgreSQL drivers.
 image:
   repository: ${image_repository_uri}/apache-superset
-  tag: 5.0.0
+  tag: v0.0.1
