--- a/kubernetes/argocd/templates/helm-values.yaml.tmpl
+++ b/kubernetes/argocd/templates/helm-values.yaml.tmpl
@@ -8,6 +8,9 @@ configs:
     accounts.rsalmond: "apiKey, login"
 
 server:
+  serviceAccount:
+    annotations:
+      iam.gke.io/gcp-service-account: ${service_account_email}
   httproute:
     enabled: true
     parentRefs:
