--- a/kubernetes/argocd-apps/templates/application.yaml.tmpl
+++ b/kubernetes/argocd-apps/templates/application.yaml.tmpl
@@ -14,3 +14,7 @@ spec:
     path: kubernetes/cert-manager/${environment}/rendered/
     repoURL: https://github.com/gpo/gpo-platform-configs
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      enabled: true
+      prune: true
