--- a/kubernetes/argocd-apps/templates/application.yaml.tmpl
+++ b/kubernetes/argocd-apps/templates/application.yaml.tmpl
@@ -94,3 +94,28 @@ spec:
     automated:
       enabled: true
       prune: true
+
+---
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: external-secrets
+  namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    namespace: external-secrets
+    server: https://kubernetes.default.svc
+  project: default
+  sources:
+  - path: kubernetes/external-secrets/${environment}/rendered
+    repoURL: https://github.com/gpo/gpo-platform-configs
+    targetRevision: HEAD
+  syncPolicy:
+    syncOptions:
+    - ServerSideApply=true
+    automated:
+      enabled: true
+      prune: true
