--- a/kubernetes/superset/templates/values.yaml.tmpl
+++ b/kubernetes/superset/templates/values.yaml.tmpl
@@ -20,5 +20,5 @@ image:
 configOverrides:
   superset_config.py: |
     FEATURE_FLAGS = {
-      DASHBOARD_RBAC: True,
+      'DASHBOARD_RBAC': True,
     }
