--- a/kubernetes/superset/templates/values.yaml.tmpl
+++ b/kubernetes/superset/templates/values.yaml.tmpl
@@ -1,13 +1,18 @@
 # +argocd:skip-file-rendering
 postgresql:
-  image:
-    # Use default registry and tag from PostgreSQL subchart,
-    # but set repository to legacy images repository.
-    repository: bitnamilegacy/postgresql
+  enabled: false
+
+supersetNode:
+  connections:
+    # default hostname provided by cnpg
+    db_host: superset-rw
+
 redis:
   image:
-    # Same idea for Redis.
+    # Use default registry and tag from Redis subchart,
+    # but set repository to legacy images repository.
     repository: bitnamilegacy/redis
+
 # Custom Superset image which contains their upstream release plus pip packages
 # for MySQL and PostgreSQL drivers.
 image:
