move argocd to wildcard listener

--- a/kubernetes/argocd/templates/values.yaml.tmpl
+++ b/kubernetes/argocd/templates/values.yaml.tmpl
@@ -15,7 +15,7 @@ server:
       kind: Gateway
       name: gpotools
       namespace: gateway
-      sectionName: argocd
+      sectionName: tls
 
 dex:
   enabled: false
