--- a/kubernetes/argocd/templates/values.yaml.tmpl
+++ b/kubernetes/argocd/templates/values.yaml.tmpl
@@ -10,6 +10,7 @@ configs:
 server:
   httproute:
     enabled: true
+    hostnames: ["${hostname}"]
     parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
