--- a/kubernetes/argocd-apps/templates/application.yaml.tmpl
+++ b/kubernetes/argocd-apps/templates/application.yaml.tmpl
@@ -53,7 +53,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: cnpg
     server: https://kubernetes.default.svc
   project: default
   source:
@@ -91,34 +91,6 @@ spec:
     repoURL: https://github.com/gpo/gpo-platform-configs
     targetRevision: HEAD
   syncPolicy:
-    automated:
-      enabled: true
-      prune: true
-
----
-
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: external-secrets
-  namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    namespace: external-secrets
-    server: https://kubernetes.default.svc
-  project: default
-  sources:
-  - path: kubernetes/external-secrets/${environment}/rendered
-    repoURL: https://github.com/gpo/gpo-platform-configs
-    targetRevision: HEAD
-  - path: kubernetes/external-secrets/${environment}
-    repoURL: https://github.com/gpo/gpo-platform-configs
-    targetRevision: HEAD
-  syncPolicy:
-    syncOptions:
-    - ServerSideApply=true
     automated:
       enabled: true
       prune: true
